# dazzle-filekit

./: .gitignore  .repokit.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml  release.yml
dazzle_filekit/: __init__.py  operations.py  verification.py
dazzle_filekit/platform/: __init__.py
dazzle_filekit/utils/: __init__.py  compat.py  disk.py  logger.py  validation.py
docs/: platform-support.md
tests/: __init__.py  test_auto_naming.py  test_compat.py  test_disk.py  test_operations.py  test_paths.py  test_smoke.py  test_verification.py
