[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filetoolkit"
version = "0.1.0"
description = "Cross-platform file operations toolkit with path handling, verification, and metadata preservation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dynamic = []
authors = [
    {name = "Dustin Darcy", email = "6962246+djdarcy@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]
keywords = ["file", "operations", "path", "verification", "hash", "metadata", "cross-platform"]
dependencies = [
    "pathlib;python_version<\"3.4\""
]

[project.optional-dependencies]
unctools = ["unctools>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "flake8>=3.8.0",
    "black>=20.8b1",
]

[project.urls]
"Homepage" = "https://github.com/DazzleLib/filetoolkit"
"Bug Reports" = "https://github.com/DazzleLib/filetoolkit/issues"
"Source" = "https://github.com/DazzleLib/filetoolkit"
"Documentation" = "https://github.com/DazzleLib/filetoolkit#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["filetoolkit*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
filetoolkit = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=filetoolkit --cov-report=term-missing"
